--- a/arch/arm64/boot/dts/mediatek/mt6983.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6983.dts
@@ -410,7 +410,7 @@
 	/* chosen */
 	chosen: chosen {
 		bootargs = "console=tty0 root=/dev/ram \
-			rcupdate.rcu_expedited=1 \
+			rcupdate.rcu_expedited=1 rcutree.enable_rcu_lazy=1 rcu_nocbs=all \
 			8250.nr_uarts=4 \
 			swiotlb=noforce \
 			initcall_debug=1 transparent_hugepage=never \
